# skills

./: .gitignore  LICENSE  README.md
#INSTRUCTIONS/Claude/: CLAUDE.md  settings.json
#INSTRUCTIONS/Codex/: AGENTS.md
GUIDELINES/: CLAUDE-stop_hook_example.md  Swift macOS Build Resilience Guideline.md  first-class_macOS_development_guideline.md  force-skill-use-on-Claude.md
advisory-suggestion/: SKILL.md
advisory-suggestions/: README.md  SKILL.md
advisory-suggestions/v1.3.0/: SKILL.md
advisory-suggestions/v1.3.1/: SKILL.md
advisory-suggestions/v1.4.0/: SKILL.md
advisory-suggestions/v1.4.1/: SKILL.md
advisory-suggestions/v1.5.0/: SKILL.md
agent-readability-review/: SKILL.md
agent-readability-review/v1.1.5/: SKILL.md
agent-readability-review/v1.1.6/: SKILL.md
ai-dev-loop/: COMPLETE-PACKAGE-GUIDE.md  INSTALLATION.md  QUICKSTART.md  README.md  REFERENCE.md  SCORING-EVIDENCE-SCHEMA.json  SKILL.md  VALIDATION-RESULTS.md
ai-dev-loop-sanitize-commits/: SKILL.md
benchmark-dataset-builder/: SKILL.md
context-compressor/: SKILL.md
core-coding-agent-behavior/: SKILL.md
github-issue-fix-planner/: SKILL.md
insightforge-reviewer/: SKILL.md
mythos-visualization/: README.md  SKILL.md  artifact_checksums.sha256  skill_contract.json
project-scaffolding-and-docs/: README.md  SKILL.md  setup.md
realitybench-caseforge/: SKILL.md
variant-best-version-builder/: SKILL.md
visual-diff-skill/: README.md  SKILL.md  example_usage.py  pyproject.toml  requirements.txt  visual_diff.py
visual-diff-skill/scripts/: smoke_test.py  validate_report.py
(+170 files in other folders)
